ui: fetching videos ability, some reworks